Show correct dataset and model descriptions when classes are wrapped. - Dataset constructor takes an optional description argument. - Subclasses of Dataset and Model can override description() for custom info. - Improved display on frontend: short version shows only first line,   and URLs are clickable in expanded view.
PiperOrigin-RevId: 342557001

--- a/lit_nlp/client/modules/global_settings.css
+++ b/lit_nlp/client/modules/global_settings.css
@@ -68,9 +68,13 @@
 }
 
 a {
+  color: var(--app-dark-text-color);
+  text-decoration: none;
+}
+
+a.link-out {
   color: #888;
   padding: 0 5pt;
-  text-decoration: none;
 }
 
 mwc-icon {
